Task Class Creation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,19 @@
     <string name="app_name">Triumph</string>
     <string name="signOut"><u>Sign Out</u></string>
     <string name="title">Name</string>
+    <string-array name="planets_array">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
+    <string-array name="Task_Priority">
+        <item>Regular</item>
+        <item>Important</item>
+        <item>Priority</item>
+    </string-array>
 </resources>
